# gamma-spectroscopy

./: .gitignore  CHANGELOG  README.md  README.rst  plot_gamma_data.py  pyproject.toml  setup.py  test_daq.py  test_daq_callbacks.py  test_highspeed_daq.py  test_nodata_crash.py  test_thread_timers.py  test_two_channels.py
daq/: README.md  gamma_spectroscopy_gui.py  gamma_spectroscopy_gui.ui  picoscope_5000a.py
docs/: conf.py  index.rst  userguide.rst
gamma-spectroscopy/: gamma_spectroscopy_gui.ui
gamma_spectroscopy/: fake_picoscope.py  gamma_spectroscopy_gui.py  gamma_spectroscopy_gui.ui  picoscope_5000a.py
scripts/: test_highspeed_daq.py  test_nodata_crash.py  test_two_channels.py
src/gamma_spectroscopy/controllers/: fake_picoscope.py  picoscope_5000a.py
src/gamma_spectroscopy/views/: gamma_spectroscopy_gui.py  gamma_spectroscopy_gui.ui  test_experiment.py
