[tool.poetry]
name = "gamma-spectroscopy"
version = "2.0"
description = "A GUI for gamma spectroscopy using a PicoScope"
license = "GPL-3.0-or-later"
authors = ["David Fokkema <davidfokkema@icloud.com>"]
readme = "README.rst"
repository = "https://github.com/davidfokkema/gamma-spectroscopy"
documentation = "https://gamma-spectroscopy.readthedocs.io/en/latest/"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
